--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: |
-          source ~/.bashrc
+          source /home/ot/.bashrc
           node -v
           npm install
           npx @tailwindcss/cli -i ./src/input.css -o ./web/output.css
