--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: |
-          source /home/ot/.bashrc
+          /home/ot/.nvm/nvm.sh
+          nvm use 22
           node -v
           npm install
           npx @tailwindcss/cli -i ./src/input.css -o ./web/output.css
