Fix copying content of website
The content is in the root of the artifact.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,4 +66,4 @@ jobs:
         with:
           name: artifact_public
       - run: |
-          rm -rf /home/ot/web/* && cp -r public/* /home/ot/web
+          rm -rf /home/ot/web/* && cp -r * /home/ot/web
